<resources>
    <string name="app_name">UsoDeFragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">welcome</string>
    <string name="write_name">name</string>
    <string name="start">start</string>
    <string name="facebook_alternative">Pertenece a Facebook</string>
    <string name="twitter_alternative">Pertenece a Twitter</string>
    <string name="whatsapp_alternative">Pertenece a Whatsapp</string>
    <string name="instagram_alternative">Pertenece a Instagram</string>
    <string name="tv_question1">¿A que logo pertenece la imagen?</string>
    <string name="win_message">¡Ganaste!</string>
    <string name="btn_play_again">Juega de nuevo</string>
    <string name="btn_send">Enviar</string>
    <string name="tv_you_louse">Perdiste</string>
    <string name="btn_try_again">Intentalo de nuevo</string>
</resources>