<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriviaFragment">


    <TextView
        android:id="@+id/tv_SaludoUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_imagenWhatsapp"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_question1"
        android:textSize="17sp"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_imagenWhatsapp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_question">


        <RadioButton
            android:id="@+id/rdB_Facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_alternative" />

        <RadioButton
            android:id="@+id/rdB_Twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twitter_alternative" />

        <RadioButton
            android:id="@+id/rdB_Whatsapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whatsapp_alternative" />

        <RadioButton
            android:id="@+id/rdB_Instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instagram_alternative" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="48dp"
        android:text="@string/btn_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.134" />


</androidx.constraintlayout.widget.ConstraintLayout>